website_p01.css
.top {
  height: 50px;
  line-height: 50px;
  align-items: center;
}
.wrapper {
  min-height: 100vh;
}

.the-one {
  background-image: linear-gradient(white, orange),
    url(./images/assets/bg-banner.jpg);
  background-size: cover;
  background-position: 0 80%;
  background-blend-mode: color-burn;
}
.the-two {
  background-image: url(./images/assets/campsite.jpg);
  background-size: cover;
  background-blend-mode: normal;
}
.scrollwrapper {
  overflow-x: auto;
  overflow-y: hidden;
  scroll-behavior: smooth;
}

.product-row {
  display: flex;
  flex-wrap: nowrap;
  overflow-x: auto; /* allows horizontal scrolling */
  scroll-behavior: smooth; /* enables smooth scroll for manual drag */
}

.product-row::-webkit-scrollbar {
  display: none;
}
.footertop::before {
  content: "";
  position: absolute;
  top: -100px; /* pull it upward */
  left: 0;
  width: 100%;
  height: 100px; /* height of your wave image */
  background: url("./images/assets/footer.png") top center;
  background-size: contain;
  pointer-events: none; /* avoid blocking clicks */
}
.floating-box {
  position: fixed;
  bottom: 0px;
  right: 30px;
  z-index: 5;
  width: 300px;
  transition: transform 0.4s ease;
  z-index: 999;
}

/* Collapsed state (only tab visible) */
.floating-box.collapsed {
  transform: translateY(85%); /* hides most of the box except the tab */
}

.chat-toggle {
  background-color: #ffc107;
  color: #000;
  padding: 10px;
  text-align: center;
  font-weight: bold;
  border-radius: 15px 15px 0 0;
  cursor: pointer;
  box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.2);
}

.chat-panel {
  background-color: white;
  border: 2px solid #ffc107;
  border-top: none;
  padding: 15px;
  box-shadow: 0 -5px 10px rgba(0, 0, 0, 0.2);
}

.dropdown:hover > .dropdown-menu,
.dropend:hover > .dropdown-menu {
  display: block;
  margin-top: 0.125em;
  margin-left: 0.125em;
  margin-right: 80%;
}
.dropdown .dropdown-menu {
  display: none;
}
@media screen and (min-width: 769px) {
  .dropend:hover > .dropdown-menu {
    position: absolute;
    top: 0;
    left: 100%;
  }
}

